<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="timezones">Timezones</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="logout">Logout</string>
    <string name="timezone_name">Timezone name</string>
    <string name="gmt_offset">GMT offset</string>
    <string name="city_name">City name</string>
    <string name="save">Save</string>
    <string name="add_timezone">Add timezone</string>
    <string name="timezone">Timezone</string>
    <string name="list_is_empty">List is empty</string>
    <string name="gmt">GMT: %1$d</string>
    <string name="search">Search</string>
    <string name="please_wait">Please wait</string>
    <string name="signing_up">Signing up</string>
    <string name="logging_in">Logging in</string>
    <string name="server_error">Exception occurred while connecting to server.</string>
    <string name="timezone_validation_msg">Timezone or city cannot be empty!</string>
        <string name="selected_count">%1$d selected</string>
    
</resources>